Fixed spacing bug. Gave a nicer color to the left shadow.

--- a/pychess/content/stylesheet.less
+++ b/pychess/content/stylesheet.less
@@ -211,16 +211,17 @@ p {
 #navlist:after {
   content: url(/images/bar_slice_right.png);
   float:right;
+  height:38px;
 }
 
 #content{
-  background:transparent url(/images/shadow_sides.png) repeat-y;
+  background:transparent url(/images/left_shadow.png) no-repeat;
   clear: both;
   display: block;
 
   padding: 30px @padding 80px @padding;
   width: @content_width - 2 * @padding;
-  margin: -5px auto 0 auto;
+  margin: 0 auto 0 auto;
 }
 
 #footer{
